--- a/marketing.html
+++ b/marketing.html
@@ -8,11 +8,8 @@
         content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
     <title>NoahTech</title>
-
-    <meta name="description" content />
-
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href />
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -156,7 +153,7 @@
 
                         <div class="collapse navbar-collapse" id="navbar-ex-4">
 
-                            <div class="navbar-nav ms-auto d-lg-flex align-items-lg-center">
+                            <div class="navbar-nav ms-auto d-lg-flex align-items-lg-center justify-content-center">
 
                                 <div class="d-flex align-items-center">
                                     <li class="nav-item lh-1 me-4 navbar-search mt-lg-0 mt-3 ">
