--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                     <!-- Layouts -->
                     <li class="menu-item active">
                         <a href="/" class="menu-link d-flex align-items-center">
-                           <img class="me-3" src="assets/img/sidebar_icon/dashboard.png" alt="not-show">
+                           <img class="me-5" src="assets/img/sidebar_icon/dashboard.png" alt="not-show">
                             <div>Dashboard</div>
                         </a>
                     </li>
                     <li class="menu-item">
                         <a href="#" class="menu-link menu-toggle d-flex align-items-center" style="--menu-toggle-after: none;">
-                             <img class="me-3" src="assets/img/sidebar_icon/project.png" alt="not-show">
+                             <img class="me-5" src="assets/img/sidebar_icon/project.png" alt="not-show">
                             <div>Projects</div>
                             <span class="menu-toggle-icon ri-add-line"></span>
                         </a>
@@ -74,7 +74,7 @@
                     </li>
                     <li class="menu-item">
                         <a href="#" class="menu-link menu-toggle d-flex align-items-center" style="--menu-toggle-after: none;">
-                             <img class="me-3" src="assets/img/sidebar_icon/deparments.png" alt="not-show">
+                             <img class="me-5" src="assets/img/sidebar_icon/deparments.png" alt="not-show">
 
                             <div>Department</div>
                             <span class="menu-toggle-icon ri-add-line"></span>
@@ -97,14 +97,14 @@
 
                     <li class="menu-item">
                         <a href="#" class="menu-link d-flex align-items-center">
-                           <img class="me-3" src="assets/img/sidebar_icon/team.png" alt="not-show">
+                           <img class="me-5" src="assets/img/sidebar_icon/team.png" alt="not-show">
                             <div>Team</div>
                         </a>
                     </li>
                     <li class="menu-item">
                         <a href="#" class="menu-link d-flex align-items-center">
                            
-                          <img class="me-3" src="assets/img/sidebar_icon/setting.png" alt="not-show">
+                          <img class="me-5" src="assets/img/sidebar_icon/setting.png" alt="not-show">
 
                             <div >Setting</div>
                         </a>
@@ -115,14 +115,14 @@
 
                         <li class="menu-item">
                         <a href="#" class="menu-link d-flex align-items-center">
-                           <img class="me-3" src="assets/img/sidebar_icon//help.png" alt="not-show">
+                           <img class="me-5" src="assets/img/sidebar_icon//help.png" alt="not-show">
                             <div>Help & information</div>
                         </a>
                     </li>
                     <li class="menu-item">
                         <a href="#" class="menu-link d-flex align-items-center">
                            
-                          <img class="me-3" src="assets/img/sidebar_icon/logout.png" alt="not-show">
+                          <img class="me-5" src="assets/img/sidebar_icon/logout.png" alt="not-show">
 
                             <div >Logout</div>
                         </a>
@@ -334,6 +334,96 @@
                                 </div>
                                 <div class="row mt-5 ">
 
+                                    <div class="col-lg-3 col-md-6 col-12 mb-4">
+                                        <div class="card dashboard-card">
+                                            <div class="px-6">
+
+                                                <div class="d-flex align-items-center">
+                                                    <div class="icon title-icon text-white rounded-circle p-2 me-2">
+                                                        <i class="ri-store-3-line"></i>
+                                                    </div>
+                                                    <h4 class="mb-0 font-26px">Marketing</h5>
+                                                </div>
+                                                <p class="font-18px my-4">Lorem
+                                                    Ipsum is simply dummy
+                                                    text of the printing and
+                                                    typesetting
+                                                    industry.</p>
+                                            </div>
+                                            <div class="border mb-4">
+
+                                            </div>
+                                            <!-- <hr> -->
+                                            <div class="d-flex align-items-center justify-content-between px-6">
+                                                <div
+                                                    class="link-arrow d-flex align-items-center justify-content-center">
+                                                    <a href="#">
+                                                       <img src="assets/img/icons/link-arrow.png" alt="">
+                                                    </a>
+                                                </div>
+                                                <div class="d-flex">
+                                                    <div class="avatars-group">
+
+                                                        <img src="https://www.w3schools.com/w3css/img_avatar3.png"
+                                                            class="rounded-circle me-1" alt="User 1">
+                                                        <img src="https://www.w3schools.com/w3css/img_avatar3.png"
+                                                            class="rounded-circle me-1" alt="User 2">
+
+                                                        <div
+                                                            class="user-count-icon text-black rounded-circle d-flex align-items-center justify-content-center">
+                                                            +2
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3 col-md-6 col-12 mb-4">
+                                        <div class="card dashboard-card ">
+                                            <div class="px-6">
+
+                                                <div class="d-flex align-items-center">
+                                                    <div class="icon title-icon text-white rounded-circle p-2 me-2">
+                                                        <i class="ri-store-3-line"></i>
+                                                    </div>
+                                                    <h4 class="mb-0 font-26px">Marketing</h5>
+                                                </div>
+                                                <p class="font-18px my-4">Lorem
+                                                    Ipsum is simply dummy
+                                                    text of the printing and
+                                                    typesetting
+                                                    industry.</p>
+                                            </div>
+                                            <div class="border mb-4">
+
+                                            </div>
+                                            <!-- <hr> -->
+                                            <div class="d-flex align-items-center justify-content-between px-6">
+                                                <div
+                                                    class="link-arrow d-flex align-items-center justify-content-center">
+                                                    <a href="#">
+                                                       <img src="assets/img/icons/link-arrow.png" alt="">
+                                                    </a>
+                                                </div>
+                                                <div class="d-flex">
+                                                    <div class="avatars-group">
+
+                                                        <img src="https://www.w3schools.com/w3css/img_avatar3.png"
+                                                            class="rounded-circle me-1" alt="User 1">
+                                                        <img src="https://www.w3schools.com/w3css/img_avatar3.png"
+                                                            class="rounded-circle me-1" alt="User 2">
+
+                                                        <div
+                                                            class="user-count-icon text-black rounded-circle d-flex align-items-center justify-content-center">
+                                                            +2
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
                                     <div class="col-lg-3 col-md-6 col-12 mb-4">
                                         <div class="card dashboard-card">
                                             <div class="px-6">
