--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 </li>
                                 <li class="nav-item d-flex align-items-center">
                                     <img src="assets/img/navbar_icon/board.png" alt="not-show">
-                                    <a class="nav-link active" href="#">Board</a>
+                                    <a href="board.html" class="nav-link active">Board</a>
                                 </li>
                                 <li class="nav-item d-flex align-items-center">
                                      <img src="assets/img/navbar_icon/calendar.png" alt="not-show">
